<resources>
    <string name="app_name">Calculator</string>
    <string name="zero">0</string>
    <string name="divider">/</string>
    <string name="multiple">*</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="equal">=</string>
    <string name="mod">%</string>
    <string name="clear_last">clear last</string>
    <string name="ac">AC</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="night">9</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="sign">±</string>
    <string name="dot">.</string>
    <string name="disCount_price"><strike>5</strike></string>
    <string name="jerry">jerry</string>
    <string name="hi_jerry">Hi, Jerry 👋🏻</string>
    <string name="which_tom_do_you_want_to_buy">Which Tom do you want to buy?</string>
    <string name="notification">notification</string>
    <string name="search_about_tom">Search about tom ...</string>
    <string name="image_filter">image filter</string>
    <string name="adopt_tom_free_fail_free_nguarantee">Adopt Tom! (Free Fail-Free\nGuarantee)</string>
    <string name="buy_1_tom_and_get_2_for_free">Buy 1 Tom and get 2 for free</string>
    <string name="jerry_card_slider">jerry card slider</string>
    <string name="cheap_tom_section">Cheap tom section</string>
    <string name="view_all">View all</string>
    <string name="arrow_right">arrow right</string>
    <string name="sport_tom">sport tom</string>
    <string name="sport_tom_text">Sport Tom</string>
    <string name="he_runs_1_meter_trips_nover_his_boot">He runs 1 meter... trips\nover his boot.</string>
    <string name="card_shop_first">card shop first</string>
    <string name="bug_money">bug money</string>
    <string name="_10_cheeses">10 cheeses</string>
    <string name="tome_lover">Tome Lover</string>
    <string name="tom_the_lover">Tom the lover</string>
    <string name="he_loves_one_sidedly_nand_is_beaten_by_the_other_nside">He loves one-sidedly...\nand is beaten by the other\nside.</string>
    <string name="card_shop_second">card shop second</string>
    <string name="_5_cheeses">5 cheeses</string>
    <string name="tom_bomb">tom Bomb</string>
    <string name="tom_the_bomb">Tom the bomb</string>
    <string name="he_blows_himself_up_nbefore_jerry_can_catch_him">He blows himself up\nbefore Jerry can catch\nhim.</string>
    <string name="spy_tom_image">spy tom image</string>
    <string name="spy_tom">Spy Tom</string>
    <string name="disguises_itself_as_a_table">Disguises itself as a table.</string>
    <string name="_12_cheeses">12 cheeses</string>
    <string name="ellipse">ellipse</string>
</resources>